--- a/spring-boot-elasticsearch/.gitignore
+++ b/spring-boot-elasticsearch/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### maven ###
+mvnw
+mvnw.cmd
