--- a/spring-boot-elasticsearch/pom.xml
+++ b/spring-boot-elasticsearch/pom.xml
@@ -17,6 +17,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <es.version>7.1.0</es.version>
+        <swagger.version>2.9.2</swagger.version>
     </properties>
     <dependencies>
         <dependency>
@@ -30,17 +32,17 @@
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>7.1.0</version>
+            <version>${es.version}</version>
         </dependency>
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-client</artifactId>
-            <version>7.1.0</version>
+            <version>${es.version}</version>
         </dependency>
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>7.1.0</version>
+            <version>${es.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -51,13 +53,14 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <version>${swagger.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
+            <version>${swagger.version}</version>
         </dependency>
+        <!--        swagger end-->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -68,8 +71,6 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
-
-        <!--        swagger end-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
