--- a/spring-boot-elasticsearch/pom.xml
+++ b/spring-boot-elasticsearch/pom.xml
@@ -71,6 +71,20 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
+        <!-- 分词 start -->
+        <!-- https://mvnrepository.com/artifact/org.apdplat/word -->
+        <!--        <dependency>-->
+        <!--            <groupId>org.apdplat</groupId>-->
+        <!--            <artifactId>word</artifactId>-->
+        <!--            <version>1.3.1</version>-->
+        <!--        </dependency>-->
+
+        <!-- 分词 end -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
