--- a/spring-boot-security-demo/src/main/resources/application.properties
+++ b/spring-boot-security-demo/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+server.port=8080
+# ????????
 #spring.security.user.name=user
 #spring.security.user.password=123456
+
+spring.web.resources.static-locations=classpath:/
+# ???html??????templates??????????????????????
+#spring.mvc.view.prefix=views
+# ????????
+spring.mvc.view.suffix=.html
+
